<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.e-nexus</groupId>
	<artifactId>osm-tile-spring</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<description>
		Start a local webserver to serve osm tiles. Start and visit
		http://localhost:8080/web/index.html
	</description>
	<properties>
		<java.version>17</java.version>
		<boot.version>2.7.10</boot.version>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<osmdbuser>osmdbuser</osmdbuser>
		<osmdbpass>osmdbpass</osmdbpass>
		<osmdburl>osmdbpass</osmdburl>
		<defaultGoalCheck>package pmd:check spotbugs:check checkstyle:check</defaultGoalCheck>
		<defaultGoals>clean ${defaultGoalCheck}
			spring-boot:run</defaultGoals>
		<pmd.printFailingErrors>true</pmd.printFailingErrors>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.inject</groupId>
			<artifactId>javax.inject</artifactId>
			<version>1</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>
		<dependency>
			<groupId>net.postgis</groupId>
			<artifactId>postgis-jdbc</artifactId>
			<version>2.5.1</version>
		</dependency>
	</dependencies>
	<build>
		<defaultGoal>${defaultGoals}</defaultGoal>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<additionalProperties>
						<osmdburl>${osmdburl}</osmdburl>
						<osmdbuser>${osmdbuser}</osmdbuser>
						<osmdbpass>${osmdbpass}</osmdbpass>
					</additionalProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.19.0</version>
				<configuration>
					<rulesets>
						<ruleset>pmd.xml</ruleset>
					</rulesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.7.2.0</version>
				<dependencies>
					<dependency>
						<groupId>com.github.spotbugs</groupId>
						<artifactId>spotbugs</artifactId>
						<version>4.7.2</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<configuration>
						<propertyExpansion>
							org.checkstyle.sun.suppressionfilter.config=${maven.multiModuleProjectDirectory}/checkstyle-suppressions.xml</propertyExpansion>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<compilerArgs>
							<arg>--add-exports</arg>
							<arg>java.base/sun.security.rsa=ALL-UNNAMED</arg>
							<arg>--add-exports</arg>
							<arg>java.base/sun.security.util=ALL-UNNAMED</arg>
							<arg>--add-exports</arg>
							<arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
							<arg>--add-opens</arg>
							<arg>java.base/java.lang=ALL-UNNAMED</arg>
						</compilerArgs>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>